# D-Drive

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: DDConfig.h
src/: Shell.cpp  Shell.h  gdrive_handler.cpp  gdrive_handler.h  main.cpp  metadata_handler.cpp  metadata_handler.h
